// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading component matches centered snapshot 1`] = `
<div
  className="container"
>
  <div
    className="wrapper"
  >
    <h6
      className="tag"
    >
      H6 Heading centered
    </h6>
  </div>
</div>
`;

exports[`Heading component matches className snapshot 1`] = `
<div
  className="container"
>
  <div
    className="wrapper"
  >
    <h4
      className="tag foobar"
    >
      H4 Heading with className
    </h4>
  </div>
</div>
`;

exports[`Heading component matches id snapshot 1`] = `
<div
  className="container"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="wrapper"
  >
    <h2
      className="tag"
    >
      H2 Heading with ID
    </h2>
    <a
      aria-labelledby="FooBaz"
      className="link"
      href="#FooBaz"
      id="FooBaz"
    >
      <svg
        height="1.75rem"
        viewBox="0 0 24 24"
        width="1.75rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth={2.5}
        >
          <path
            d="M14 11.998C14 9.506 11.683 7 8.857 7H7.143C4.303 7 2 9.238 2 11.998c0 2.378 1.71 4.368 4 4.873a5.3 5.3 0 0 0 1.143.124"
          />
          <path
            d="M10 11.998c0 2.491 2.317 4.997 5.143 4.997h1.714c2.84 0 5.143-2.237 5.143-4.997c0-2.379-1.71-4.37-4-4.874A5.3 5.3 0 0 0 16.857 7"
          />
        </g>
      </svg>
    </a>
  </div>
</div>
`;

exports[`Heading component matches uncentered snapshot 1`] = `
<div
  className="container"
>
  <div
    className="wrapper"
  >
    <h2
      className="tag"
    >
      H2 Heading
    </h2>
  </div>
</div>
`;
